# nix-bucks-legacy

./: Cargo.toml  Makefile  NixBucks.desktop  README.md  org.margual56.NixBucks.yml
.github/workflows/: rust.yml
locales/: app.json  languages.json  recurrence.json  stats.json
locales/windows/: common.json  fixed_expense_window.json  income_window.json  punctual_income_window.json  subscription_window.json
src/: app.rs  lib.rs  main.rs  new_subscription.rs
src/config/: app_style.rs  mod.rs
src/utils/: fixed_expense.rs  mod.rs  recurrence.rs  subscription.rs
src/windows/: mod.rs  new_expense.rs  new_income.rs  new_punctual_income.rs  new_subscription.rs
