[package]
name = "budgeting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
directories = "5.0.1"
eframe = { version = "0.22.0", features = ["wayland", "wgpu"] }
egui_extras = { version = "0.22.0", features = ["datepicker"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
utc-dt = "0.2.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "js", "serde"] }
