[package]
name = "budgeting"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "^0.44"
chrono = { version = "^0.4", features = ["serde"] }
directories = "^5.0"
eframe = { version = "^0.22", features = ["wayland", "wgpu"] }
egui_extras = { version = "^0.22", features = ["datepicker"] }
num-traits = "^0.2"
once_cell = "^1.18"
ordered-float = { version = "3.9.1", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^1.4", features = ["v4", "fast-rng", "js", "serde"] }
